salesforce/force-app/main/default/objects/D360_Recovery_Account__c/D360_Recovery_Account__c.object-meta.xml
<CustomObject>
    <description>Mock unified account selected by the Dormant Revenue Recovery goal.</description>
    <label>D360 Recovery Account</label>
    <nameField>
        <label>Recovery Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>D360 Recovery Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>