salesforce/force-app/main/default/objects/D360_Recovery_Account__c/fields/Activation_Gap_Days__c.field-meta.xml
<CustomField>
    <fullName>Activation_Gap_Days__c</fullName>
    <label>Activation Gap Days</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>