salesforce/force-app/main/default/objects/D360_Recovery_Account__c/fields/AE_Inactivity_Days__c.field-meta.xml
<CustomField>
    <fullName>AE_Inactivity_Days__c</fullName>
    <label>AE Inactivity Days</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>