salesforce/force-app/main/default/objects/D360_Recovery_Account__c/fields/Goal_Run__c.field-meta.xml
<CustomField>
    <fullName>Goal_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goal Run</label>
    <referenceTo>D360_Goal_Run__c</referenceTo>
    <relationshipLabel>Recovery Accounts</relationshipLabel>
    <relationshipName>Recovery_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>