salesforce/force-app/main/default/objects/D360_Recovery_Account__c/fields/Intent_Score__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score__c</fullName>
    <label>Intent Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>