salesforce/force-app/main/default/objects/D360_Recovery_Account__c/fields/Recommended_Motion__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Motion__c</fullName>
    <label>Recommended Motion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>