salesforce/force-app/main/default/objects/D360_Recovery_Account__c/fields/Recovery_Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Priority_Score__c</fullName>
    <label>Recovery Priority Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>