salesforce/force-app/main/default/objects/D360_Recovery_Account__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Enterprise</fullName><default>true</default><label>Enterprise</label></value>
            <value><fullName>Commercial</fullName><default>false</default><label>Commercial</label></value>
            <value><fullName>Mid-Market</fullName><default>false</default><label>Mid-Market</label></value>
            <value><fullName>SMB</fullName><default>false</default><label>SMB</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>