salesforce/force-app/main/default/objects/D360_Recovery_Account__c/fields/Support_Blocker_Score__c.field-meta.xml
<CustomField>
    <fullName>Support_Blocker_Score__c</fullName>
    <label>Support Blocker Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>