salesforce/force-app/main/default/objects/D360_Recovery_Account__c/fields/Unified_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Unified_Account_Id__c</fullName>
    <externalId>true</externalId>
    <label>Unified Account Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>