salesforce/force-app/main/default/objects/D360_Recovery_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Contract_Value__c</columns>
    <columns>Recovery_Priority_Score__c</columns>
    <columns>Activation_Gap_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Recovery Accounts</label>
</ListView>